[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/tower-defense-top-down/png/buy.png" type="Texture" id=1]
[ext_resource path="res://scenes/strategic-point-menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/strategic-point.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/strategic-point-selected.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.4755, 39.7502 )

[node name="StrategicPoint" type="Area2D"]
z_index = 1
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TowerContainer" type="Node2D" parent="."]

[node name="StrategicPointMenu" parent="." instance=ExtResource( 2 )]
visible = false
mouse_filter = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 12.0
[connection signal="input_event" from="." to="." method="_on_StrategicPoint_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_StrategicPoint_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_StrategicPoint_mouse_exited"]
[connection signal="tower_bought" from="StrategicPointMenu" to="." method="_on_StrategicPointMenu_tower_bought"]
[connection signal="tower_sold" from="StrategicPointMenu" to="." method="_on_StrategicPointMenu_tower_sold"]
